kubernetes/apps/home/emqx/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.mcf.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
spec:
  parentRefs:
    - name: istio-ingressgateway
      namespace: istio-ingress
  hostnames:
    - emqx.milton.mcf.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: emqx
          port: 18083
